--- a/DexMasterUI/Shared/NotAuthorised.razor
+++ b/DexMasterUI/Shared/NotAuthorised.razor
@@ -7,9 +7,7 @@
             <MudText Typo="Typo.body1">
                 To continue to the Dex-Master, please sign in.
             </MudText>
-            <MudButton StartIcon="@Icons.Material.Filled.Diamond" Size="Size.Large" Variant="Variant.Filled" Color="Color.Primary" Href="MicrosoftIdentity/Account/SignIn">
-                Sign In With Azure
-            </MudButton>
+            <MudButton StartIcon="@Icons.Custom.Brands.Google" Href="/Identity/Login?provider=Google" Variant="Variant.Filled" Color="Color.Info">Google Sign In</MudButton>
         </MudStack>
     </MudPaper>
 </MudContainer>
