--- a/DexMasterUI/Components/Prompts/PokemonCard.razor
+++ b/DexMasterUI/Components/Prompts/PokemonCard.razor
@@ -16,7 +16,7 @@
                 </MudTooltip>
             </CardHeaderActions>
         </MudCardHeader>
-        @* <MudCardMedia Image="images/pillars.jpg" Height="250" /> *@
+        <MudCardMedia Image="@cardPokemon.Sprites.FrontDefault" />
         <MudCardContent>
 
         </MudCardContent>
@@ -38,7 +38,7 @@
     [Parameter] 
     public string PokemonId { get; set; }
     [Parameter]
-    public bool InDialog { get; set; }
+    public bool InDialog { get; set; } = false;
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
@@ -70,7 +70,7 @@
             return;
         }
 
-        var parameters = new DialogParameters { ["Pokemon"] = cardPokemon, ["LoggedInUser"] = LoggedInUser };
+        var parameters = new DialogParameters { ["PokemonId"] = cardPokemon.Id, ["LoggedInUser"] = LoggedInUser };
         var options = new DialogOptions { CloseOnEscapeKey = true, NoHeader = true};
         await dialogService.ShowAsync<PokemonCardDialog>("Show Pokemon", parameters, options);
     }
