updated grid and packages

--- a/DexMasterUI/Components/Prompts/PokemonCard.razor
+++ b/DexMasterUI/Components/Prompts/PokemonCard.razor
@@ -16,7 +16,7 @@
                 </MudTooltip>
             </CardHeaderActions>
         </MudCardHeader>
-        <MudCardMedia Image="@cardPokemon.Sprites.FrontDefault" />
+        <!--<MudCardMedia Image="@cardPokemon.Sprites.FrontDefault" /> -->
         <MudCardContent>
 
         </MudCardContent>
