--- a/DexMasterUI/Components/Display/PokemonCard.razor
+++ b/DexMasterUI/Components/Display/PokemonCard.razor
@@ -16,7 +16,7 @@
                 </MudTooltip>
             </CardHeaderActions>
         </MudCardHeader>
-        <!--<MudCardMedia Image="@cardPokemon.Sprites.FrontDefault" /> -->
+        <MudCardMedia Image="@Pokemon.Sprites.FrontDefault" />
         <MudCardContent>
 
         </MudCardContent>
