--- a/DexMasterUI/_Imports.razor
+++ b/DexMasterUI/_Imports.razor
@@ -11,7 +11,7 @@
 @using DexMasterUI.Shared
 @using DexMasterUI.Components
 @using DexMasterUI.Components.Admin
-@using DexMasterUI.Components.Prompts
+@using DexMasterUI.Components.Display
 @using DexMasterUI.Components.Comments
 @using DexMasterUI.Components.Users
 @using DexMasterUI.Components.Layout
