--- a/DexMasterUI/Pages/PokemonSearchPage.razor
+++ b/DexMasterUI/Pages/PokemonSearchPage.razor
@@ -1,6 +1,6 @@
 @page "/Search/{SearchText}"
 
-<PromptGrid SearchTerm="@SearchText" />
+<PokemonGrid SearchTerm="@SearchText" />
 
 @code {
     [Parameter]
