--- a/DexMasterUI/Shared/LoginDisplay.razor
+++ b/DexMasterUI/Shared/LoginDisplay.razor
@@ -35,7 +35,7 @@
             <ActivatorContent>
                 <MudBadge Visible="true" Content="1" Color="Color.Warning" Overlap="true" Bordered="true">
                     <MudAvatar Color="Color.Secondary" Variant="Variant.Filled">
-                        Blep
+                        DEX
                     </MudAvatar>
                 </MudBadge>
             </ActivatorContent>
