--- a/DexMasterUI/_Imports.razor
+++ b/DexMasterUI/_Imports.razor
@@ -24,7 +24,7 @@
 @inject IPokeApiService pokeApiService
 @inject IHttpContextAccessor httpContextAccessor
 @inject IUserData userData
-@inject ILocalPokemonData localPokemonData
+@inject IPokemonData pokemonData
 @inject IDialogService dialogService
 @inject ISnackbar snackbar
 @inject IDbConnection dbConnection
