--- a/DexMasterUI/Components/Display/PokemonCard.razor
+++ b/DexMasterUI/Components/Display/PokemonCard.razor
@@ -8,13 +8,13 @@
                 </MudAvatar>
             </CardHeaderAvatar>
             <CardHeaderContent>
-                <MudText Typo="Typo.body1">@pokemonName</MudText>
+                <MudText Typo="Typo.body1">@CommonFunctions.Capitalise(Pokemon.Name)</MudText>
             </CardHeaderContent>
             <CardHeaderActions>
-                <MudIconButton @onclick="OpenDialog()" Icon="@Icons.Material.Filled.OpenInNew" Variant="Variant.Outlined" Color="Color.Primary"/>
+                <MudIconButton Icon="@Icons.Material.Filled.OpenInNew" Variant="Variant.Outlined" Color="Color.Primary"/>
             </CardHeaderActions>
         </MudCardHeader>
-        <MudCardMedia Image="@Pokemon.Sprites.FrontDefault" />
+        <!--<MudCardMedia Image="@Pokemon.Sprites.FrontDefault" />-->
         <MudCardContent>
 
         </MudCardContent>
@@ -35,21 +35,15 @@
 @code {
     [Parameter] 
     public Pokemon Pokemon { get; set; }
-    [Parameter]
-    public bool InDialog { get; set; } = false;
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
 
     private bool _readOnly;
-    private bool _favourited = false;
     private bool _userIsAuthenticated;
-    private string pokemonName;
 
     protected override async Task OnParametersSetAsync()
     {
-        pokemonName = CommonFunctions.Capitalise(Pokemon.Name);
-
         var authState = await authProvider.GetAuthenticationStateAsync();
         if (authState.User.Identity != null) _userIsAuthenticated = authState.User.Identity.IsAuthenticated;
 
@@ -58,12 +52,6 @@
 
     private async Task OpenDialog()
     {
-        if (InDialog)
-        {
-            navManager.NavigateTo($"/Pokemon/{Pokemon.Id}");
-            return;
-        }
-
         var parameters = new DialogParameters { ["PokemonId"] = Pokemon.Id, ["LoggedInUser"] = LoggedInUser };
         var options = new DialogOptions { CloseOnEscapeKey = true, NoHeader = true};
         await dialogService.ShowAsync<PokemonCardDialog>("Show Pokemon", parameters, options);
