--- a/DexMasterUI/Components/Display/PokemonCardDialog.razor
+++ b/DexMasterUI/Components/Display/PokemonCardDialog.razor
@@ -1,5 +1,5 @@
 <CascadingValue Value="@LoggedInUser">
-    <PokemonCard PokemonId="PokemonId" InDialog="true"/>
+    <PokemonCard Pokemon="Pokemon" />
 </CascadingValue>
 
 @code {
@@ -9,13 +9,13 @@
     [Parameter]
     public User LoggedInUser { get; set; }
     [Parameter] 
-    public int PokemonId { get; set; }
+    public Pokemon Pokemon { get; set; }
 
     void Submit() => MudDialog.Close(DialogResult.Ok(true));
     void Cancel() => MudDialog.Cancel();
 
     void GoToPrompt()
     {
-        navManager.NavigateTo($"/Pokemon/{PokemonId}");
+        navManager.NavigateTo($"/Pokemon/{Pokemon.Id}");
     }
 }
