--- a/DexMasterUI/Components/Display/PokemonGrid.razor
+++ b/DexMasterUI/Components/Display/PokemonGrid.razor
@@ -151,7 +151,7 @@
 
         var offset = _pokemons.Count();
 
-        var pokemon = await pokemonData.GetPokemonListAsync(limit, offset);
+        var pokemon = await pokeApiService.GetPokemonListAsync(limit, offset);
 
         pokemon.ToList().ForEach(p => _pokemons.Add(p));
     }
